
    Re-purpose the cluster page, access it by clicking a cluster on the dashboard
    sidebar (#183)

    Store the user project in the database for each host, it can be over written
    anytime with a header (#194)

    Use the LXD recursion param to drasticly improve fetchin instances time

    Use objects because I need practise and its better
Fixed
    Cant add more than one profile to deploy cloud config (#198)

0.8.0 - 09/05/2020

Added
    Bulk action to stop containers (#184)
    Bulk action to start containers (#185)
    Add (optional) select GPU when deploying a cloud config (#199)

Changed
    Renamespaced & updated class names for lots of "Containers" to "Instances"
    to be consistent with the way we use LXD API, this will break any scripts

    When creating a usedBy link fetch image details and show user freindly name
    instead of fingerprint (#186)

    Use apiToken to authenticate user on API requests as part of the journey
    to a "statless api" (so client apps can exist) the current caveat is that
    the project will default to "default" for every request, until we move the
    data into the database (#180)

    Bump bootstrap version to 4.4.1 and made some changes to the way tooltips
    are initialized to fix modals not hiding (#177)

    Use ENV for sensitiveData/certs directory for snap

    Use PCI address for GPU device when creating an instance (#197)

Fixed
    Terminal sessions not opening properly
    Some instance settings can't be properly set (close #192)
    Typos (#190)
    Ensure that an instance is created where the user asked it to be (#196)

0.7.0 - 12/04/2020

Added
    Access control - This will break any existing scripts that you may have,
        it uses sessions for everything which isn't good API design (stateful)
        so ill have to switch to using the tokens to authenticate the API

        This includes the basic functionality to login, add users & reset passwords