@@ -28,6 +28,9 @@ Changed
     Use the LXD recursion param to drasticly improve fetchin instances time
 
     Use objects because I need practise and its better
+
+    Add show password toggle when adding servers (#208)
+
 Fixed
     Cant add more than one profile to deploy cloud config (#198)
 
